mejora de notificaciones

--- a/public/index.html
+++ b/public/index.html
@@ -698,7 +698,7 @@ async function guardarEnFirebaseEnSegundoPlano(datosProcesados) {
     guardadoFirebaseEnProgreso = true;
     
     // Mostrar indicador de guardado en segundo plano
-    mostrarEstado("⏳ Guardando en la nube (segundo plano)...", "processing");
+    // mostrarEstado("⏳ Guardando en la nube (segundo plano)...", "processing");
     
     try {
         console.log('💾 Iniciando guardado en segundo plano en Firebase...');
