mejora de detalles

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/png" href="fav.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Huecos en Góndola</title>
+    <title>Reporte de Huecos en Góndola</title>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
     
     <!-- Firebase SDK -->
@@ -1550,7 +1550,7 @@ function mostrarNotificacionNavegacion(mensaje, duracion = 8000) {
                     // Generar tabla con COLUMNA CÓDIGO BARRAS MÁS ANCHA
                     doc.autoTable({
                         startY: currentY,
-                        head: [['depto', 'Aj.', 'sku', 'detalle', 'disp', 'Código', 'Cód Barras']],
+                        head: [['depto', 'Aj.a 0', 'sku', 'detalle', 'PI', 'Código', 'Cód Barras']],
                         body: tableData,
                         margin: { 
                             left: marginLeft, 
