detalle en pdf ajustar a cero

--- a/public/index.html
+++ b/public/index.html
@@ -1549,7 +1549,7 @@ function mostrarNotificacionNavegacion(mensaje, duracion = 8000) {
                     // Generar tabla con COLUMNA CÓDIGO BARRAS MÁS ANCHA
                     doc.autoTable({
                         startY: currentY,
-                        head: [['depto', 'Ajustar a 0', 'sku', 'detalle', 'PI', 'Código', 'Cód Barras']],
+                        head: [['depto', '*', 'sku', 'detalle', 'PI', 'Código', 'Cód Barras']],
                         body: tableData,
                         margin: { 
                             left: marginLeft, 
