--- a/public/index.html
+++ b/public/index.html
@@ -485,18 +485,121 @@
     <div class="container">
         <header>
             <h1>Reporte de Huecos en Góndola</h1>
-            <nav>
-                <button id="btn-cargar" class="nav-btn active">Cargar Datos</button>
-                <button id="btn-resumen" class="nav-btn">Ver Resumen</button>
-                <button id="btn-reporte" class="nav-btn">Generar Reporte</button>
-                <button id="btn-historico" class="nav-btn">Historico</button>
-            </nav>
+            
+             <div class="tienda-selector" style="margin: 15px 0; text-align: center;">
+        <label for="select-tienda" style="color: white; margin-right: 10px; font-size: 16px;">🏪 Tienda:</label>
+        <select id="select-tienda" style="padding: 10px 15px; border-radius: 8px; border: none; font-size: 16px; min-width: 300px;">
+    <option value="1092" selected>1092 - San Juan Norte</option>
+            <option value="1057">1057 - Comodoro Rivadavia</option>
+            <option value="3604">3604 - Paraná</option>
+            <option value="1010">1010 - Córdoba Sur</option>
+            <option value="1099">1099 - Posadas II</option>
+            <option value="1074">1074 - Goya (Ctes)</option>
+            <option value="1018">1018 - Quilmes</option>
+            <option value="1110">1110 - Claypole</option>
+            <option value="1055">1055 - Villa Mercedes</option>
+            <option value="1078">1078 - Salta Tartagal</option>
+            <option value="1046">1046 - Pergamino</option>
+            <option value="1077">1077 - Gral Pico (La Pampa)</option>
+            <option value="1098">1098 - R.S. Peña, Chaco</option>
+            <option value="1031">1031 - Jujuy</option>
+            <option value="1043">1043 - Laferrere</option>
+            <option value="1119">1119 - Moreno Derqui</option>
+            <option value="1058">1058 - Resistencia</option>
+            <option value="1061">1061 - Junín</option>
+            <option value="1108">1108 - Puerto Madryn</option>
+            <option value="1060">1060 - Fuerza Aérea (Cba)</option>
+            <option value="1007">1007 - La Rioja</option>
+            <option value="1030">1030 - José C Paz</option>
+            <option value="1111">1111 - San Pedro de Jujuy</option>
+            <option value="1056">1056 - Villa Nueva</option>
+            <option value="1116">1116 - Moron</option>
+            <option value="1039">1039 - Paraná 2</option>
+            <option value="3601">3601 - La Plata</option>
+            <option value="1026">1026 - Catamarca</option>
+            <option value="1097">1097 - Donato Alvarez (Cba)</option>
+            <option value="1014">1014 - Lujan</option>
+            <option value="1011">1011 - Salta</option>
+            <option value="1054">1054 - Olavarría</option>
+            <option value="1100">1100 - Santa Rosa (La Pampa) II</option>
+            <option value="1087">1087 - Pilar</option>
+            <option value="1080">1080 - Santiago del Estero Sur</option>
+            <option value="3606">3606 - Córdoba Este</option>
+            <option value="1052">1052 - Oran</option>
+            <option value="1024">1024 - Formosa</option>
+            <option value="1028">1028 - Alte Brown</option>
+            <option value="1114">1114 - Clorinda</option>
+            <option value="1086">1086 - Formosa II</option>
+            <option value="1059">1059 - Gonzalez Catán</option>
+            <option value="1029">1029 - Moreno</option>
+            <option value="1050">1050 - Lanús</option>
+            <option value="2998">2998 - San Justo</option>
+            <option value="2999">2999 - Avellaneda</option>
+            <option value="1015">1015 - Maipú</option>
+            <option value="3603">3603 - Santa Fe</option>
+            <option value="1023">1023 - La Pampa</option>
+            <option value="1045">1045 - Hurlingham (AV. Vergara)</option>
+            <option value="3613">3613 - Mendoza</option>
+            <option value="1004">1004 - San Fernando</option>
+            <option value="1085">1085 - Corrientes (Av. Maipú)</option>
+            <option value="1093">1093 - Comodoro Rivadavia Norte</option>
+            <option value="1067">1067 - San Martín (Mza)</option>
+            <option value="1042">1042 - Trelew</option>
+            <option value="1008">1008 - Corrientes</option>
+            <option value="1012">1012 - Santiago</option>
+            <option value="1037">1037 - San Martin</option>
+            <option value="1115">1115 - General Roca</option>
+            <option value="1020">1020 - Tucumán</option>
+            <option value="1051">1051 - Posadas</option>
+            <option value="1044">1044 - Hurlingham (AV. Villegas)</option>
+            <option value="1096">1096 - Caseros</option>
+            <option value="1016">1016 - Avellaneda 2</option>
+            <option value="1027">1027 - Mataderos</option>
+            <option value="3602">3602 - Bahía Blanca</option>
+            <option value="1002">1002 - Rio IV</option>
+            <option value="1003">1003 - San Luis</option>
+            <option value="1005">1005 - Las Heras</option>
+            <option value="3605">3605 - Córduba Oeste</option>
+            <option value="1036">1036 - Moreno Shopping</option>
+            <option value="1084">1084 - San Vicente</option>
+            <option value="1075">1075 - Salta Fuerza Aérea</option>
+            <option value="1013">1013 - Tigre</option>
+            <option value="1038">1038 - Cipolletti</option>
+            <option value="1032">1032 - Malvinas Arg</option>
+            <option value="1076">1076 - Lomas de Zamora</option>
+            <option value="1068">1068 - Palmares (Mza)</option>
+            <option value="1053">1053 - Viedma</option>
+            <option value="1035">1035 - 3 de Febrero</option>
+            <option value="1106">1106 - Tuc. Ejército Del Norte</option>
+            <option value="1081">1081 - Rawson San Juan</option>
+            <option value="3608">3608 - Neuquén</option>
+            <option value="4001">4001 - Campana</option>
+            <option value="1088">1088 - Tuc. Concepción</option>
+            <option value="1006">1006 - San Juan</option>
+            <option value="2997">2997 - Grafa</option>
+            <option value="1021">1021 - Neuquén 2</option>
+            <option value="1033">1033 - Rio Salí</option>
+            <option value="1022">1022 - Bariloche</option>
+            <option value="1082">1082 - Tucumán (Av. Jujuy)</option>
+            <option value="1017">1017 - La Tablada</option>
+        </select>
+    </div>
+
+    <nav>
+        <button id="btn-cargar" class="nav-btn active">Cargar Datos</button>
+        <button id="btn-resumen" class="nav-btn">Ver Resumen</button>
+        <button id="btn-reporte" class="nav-btn">Generar Reporte</button>
+        <button id="btn-historico" class="nav-btn">Historico</button>
+    </nav>
+
+
+
         </header>
 
         <main>
 
             <section id="seccion-cargar" class="seccion-activa">
-                <h2>Cargar Datos CSV</h2>
+                <h2>Cargar Datos</h2>
                 
 
                 <div id="firebase-status" class="firebase-status" style="display: none;">
@@ -513,11 +616,11 @@
                     <input type="date" id="fecha">
                 </div>
                 <div class="form-group">
-                    <label for="texto-csv">Pegar CSV completo:</label>
-                    <textarea id="texto-csv" rows="15" placeholder="Pega aquí el contenido completo del CSV..."></textarea>
+                    <label for="texto-csv">Pegar lista de SIM completa:</label>
+                    <textarea id="texto-csv" rows="15" placeholder="Pega aquí el contenido completo..."></textarea>
                     <div id="contador-lineas" class="contador-lineas"></div>
                 </div>
-                <button id="btn-cargar-datos">Procesar CSV</button>
+                <button id="btn-cargar-datos">Generar Resumen</button>
                 <div id="status"></div>
                 <div id="auto-navigate" class="auto-navigate" style="display: none;"></div>
             </section>
