correccion de nombre de boton historico

--- a/public/index.html
+++ b/public/index.html
@@ -667,7 +667,7 @@
                     <label for="fecha-historico">Seleccionar Fecha:</label>
                     <input type="date" id="fecha-historico">
                 </div>
-                <button id="btn-cargar-historico">Cargar desde Firebase</button>
+                <button id="btn-cargar-historico">Ver Resumen</button>
                 <div id="estado-historico" style="margin-top: 20px;"></div>
             </section>
         </main>
