--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,24 @@
                 </select>
             </div>
 
-            <nav>
-                <button id="btn-cargar" class="nav-btn active">Cargar Datos</button>
-                <button id="btn-resumen" class="nav-btn">Ver Resumen</button>
-                <button id="btn-reporte" class="nav-btn">Generar Reporte</button>
-                <button id="btn-historico" class="nav-btn">Histórico</button>
-            </nav>
+            <div class="header-controls">
+                <div class="settings-container">
+                    <button id="btn-settings" class="btn-icon-settings" title="Configuración y más">
+                        ⚙️
+                        <span id="nav-badge" class="nav-badge" style="display: none;"></span>
+                    </button>
+                    <!-- Floating Settings Menu -->
+                    <div id="settings-menu" class="settings-menu">
+                        <div class="menu-header">Menú de Navegación</div>
+                        <button id="btn-cargar" class="menu-item active">📤 Cargar Datos</button>
+                        <button id="btn-resumen" class="menu-item">📊 Vista Resumen</button>
+                        <button id="btn-completar" class="menu-item">🔍 Completar Información</button>
+                        <button id="btn-reporte" class="menu-item">📄 Generar Reporte</button>
+                        <button id="btn-historico" class="menu-item">🕒 Historial de Reportes</button>
+                        <button id="btn-metricas" class="menu-item">📈 Métricas y Análisis</button>
+                    </div>
+                </div>
+            </div>
         </header>
 
         <main>
@@ -75,6 +87,26 @@
                 </div>
             </section>
 
+            <!-- Section: Completar Información -->
+            <section id="seccion-completar">
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
+                    <h2>Completar Información</h2>
+                    <div class="import-actions">
+                        <label for="input-reporte-stock" class="btn-importar-label">
+                            📥 Importar Stock Report (CSV)
+                            <input type="file" id="input-reporte-stock" accept=".csv" style="display: none;">
+                        </label>
+                    </div>
+                </div>
+                <p style="color: var(--text-muted); margin-bottom: 1.5rem;">
+                    Productos encontrados en el CSV que no están en la base de datos de referencia.
+                </p>
+                <div id="completar-contenido" class="completar-grid">
+                    <!-- Populated by JS -->
+                    <div style="text-align:center; padding:3rem; color:#64748b;">No hay productos pendientes.</div>
+                </div>
+            </section>
+
             <!-- Section: Reporte -->
             <section id="seccion-reporte">
                 <h2>Generar Reporte PDF</h2>
@@ -89,19 +121,71 @@
                 <button id="btn-generar-pdf">Generar PDF</button>
             </section>
 
-            <!-- Section: Historico -->
+            <!-- Section: Histórico -->
             <section id="seccion-historico">
-                <h2>Historico</h2>
-                <p style="color: var(--text-muted); margin-bottom: 2rem;">
-                    Consulta reportes anteriores guardados en la nube.
-                </p>
-                <div class="form-group">
-                    <label>Seleccionar Fecha:</label>
-                    <input type="date" id="fecha-historico">
+                <div
+                    style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 2rem;">
+                    <div>
+                        <h2>Histórico y Análisis</h2>
+                        <p style="color: var(--text-muted)">Consulta y analiza reportes anteriores guardados en la nube.
+                        </p>
+                    </div>
+                    <div style="display: flex; gap: 0.5rem;">
+                        <button id="btn-actualizar-historial" style="width: auto; padding: 0.5rem 1rem;">🔄
+                            Actualizar</button>
+                        <button id="btn-danger-reset"
+                            style="width: auto; padding: 0.5rem 1rem; background: transparent; color: #ef4444; border: 1px solid #fee2e2; font-size: 0.75rem;">🗑️
+                            Limpiar Historial</button>
+                    </div>
                 </div>
-                <button id="btn-cargar-historico">Sincronizar Datos</button>
+
+                <div id="historico-contenido">
+                    <div class="history-list" id="lista-historial">
+                        <!-- Populated by JS -->
+                        <div style="text-align:center; padding:3rem; color:#64748b;">No hay registros previos.</div>
+                    </div>
+                </div>
             </section>
         </main>
+    </div>
+
+    <!-- PDF Viewer Modal -->
+    <div id="pdf-modal" class="pdf-modal">
+        <div class="pdf-modal-content">
+            <div class="pdf-modal-header">
+                <h3>Vista Previa del Reporte</h3>
+                <div class="pdf-modal-actions">
+                    <button id="btn-download-pdf" class="btn-download">📥 Descargar PDF</button>
+                    <button id="btn-close-modal" class="btn-close">✕</button>
+                </div>
+            </div>
+            <div class="pdf-modal-body">
+                <iframe id="pdf-iframe" title="PDF Viewer"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <!-- Summary Modal -->
+    <div id="summary-modal" class="pdf-modal">
+        <div class="pdf-modal-content" style="max-width: 500px;">
+            <div class="pdf-modal-header">
+                <h3>Resumen del Proceso</h3>
+                <button id="btn-close-summary" class="btn-close">✕</button>
+            </div>
+            <div class="pdf-modal-body" style="padding: 2rem;">
+                <div id="summary-modal-content">
+                    <!-- Populated by JS -->
+                </div>
+                <div style="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem;">
+                    <button id="btn-modal-generar-pdf" class="btn btn-primary" style="width: 100%; padding: 1rem;">
+                        📄 Generar Reporte PDF Ahora
+                    </button>
+                    <button id="btn-modal-completar" class="btn btn-secondary" style="width: 100%; display: none;">
+                        🔍 Completar Productos Desconocidos
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Application Engine -->
