Correccion de resumen, estetica de scrollbar y agregado de footer con autoria

--- a/public/index.html
+++ b/public/index.html
@@ -214,6 +214,16 @@
         </main>
     </div>
 
+    <footer
+        style="text-align: center; padding: 2.5rem 1rem; color: var(--text-muted); font-size: 0.875rem; border-top: 1px solid var(--border); margin-top: 3rem; background: rgba(255,255,255,0.5);">
+        <p style="margin-bottom: 0.5rem; font-weight: 600; color: var(--text-main);">
+            © 2026 Nestor Tartalo. Todos los derechos reservados.
+        </p>
+        <p>
+            Idea y desarrollo original. Este producto es de autoría propia.
+        </p>
+    </footer>
+
     <!-- PDF Viewer Modal -->
     <div id="pdf-modal" class="pdf-modal">
         <div class="pdf-modal-content">
