--- a/public/index.html
+++ b/public/index.html
@@ -212,17 +212,17 @@
                 </div>
             </section>
         </main>
-    </div>
 
-    <footer
-        style="text-align: center; padding: 2.5rem 1rem; color: var(--text-muted); font-size: 0.875rem; border-top: 1px solid var(--border); margin-top: 3rem; background: rgba(255,255,255,0.5);">
-        <p style="margin-bottom: 0.5rem; font-weight: 600; color: var(--text-main);">
-            © 2026 Nestor Tartalo. Todos los derechos reservados.
-        </p>
-        <p>
-            Idea y desarrollo original. Este producto es de autoría propia.
-        </p>
-    </footer>
+        <footer
+            style="text-align: center; padding: 0.75rem 1rem; color: var(--text-muted); font-size: 0.75rem; border-top: 1px solid var(--border); background: rgba(255,255,255,0.5); flex-shrink: 0;">
+            <p style="margin-bottom: 0.25rem; font-weight: 600; color: var(--text-main);">
+                © 2026 Nestor Tartalo. Todos los derechos reservados.
+            </p>
+            <p>
+                Idea y desarrollo original. Este producto es de autoría propia.
+            </p>
+        </footer>
+    </div>
 
     <!-- PDF Viewer Modal -->
     <div id="pdf-modal" class="pdf-modal">
